--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,9 @@
     /*Game Screen Dialog*/
     <string name="help_dialog_title_esp">Ayuda</string>
     <string name="exit_dialog_esp">¿Quieres volver al menú?\n El progreso se perderá</string>
-    <string name="help_dialog_esp">Las letras del pokemon están desordenadas, tu trabajo consiste en ordenarlas, ¡si estás jugando en el modo normal, la letra mayúscula será la primera de todas!</string>
+    <string name="help_dialog_esp">Hay un nombre de un Pokemon con las letras desordenadas, tu trabajo consiste en ordenarlas</string>
+    <string name="replay_esp">Volver a jugar</string>
+    <string name="return_to_menu_esp">Volver al menú</string>
 
     /*Game Screen*/
     <string name="score_esp">Puntuación: %d</string>
@@ -31,27 +33,15 @@
     /*Settings Screen*/
     <string name="music_esp">Música</string>
     <string name="sfx_esp">Efectos de Sonido</string>
+    <string name="hard_mode_esp">Modo difícil</string>
 
     /*About Screen*/
     <string name="patch_notes_esp">Notas de parche</string>
     <string name="credits_esp">Créditos</string>
 
-    /*OLD ONES*/
 
 
-    <string name="game_end">Fin de la partida</string>
-    <string name="you_scored">"Has conseguido: %d puntos"</string>
-    <string name="no_score_message">Debes de ser miembro del team Rocket…</string>
-    <string name="low_score_message">No está mal, aunque podrías haberlo hecho mejor</string>
-    <string name="medium_score_message">Bien hecho, conoces bastante bien a los pokemon</string>
-    <string name="high_score_message">¡Eres un verdadero ESPECIALISTA pokémon!</string>
 
-    <string name="titulo_confirmacion">Alerta</string>
-    <string name="returnMenu">Volver al menu</string>
-    <string name="furretTitle">Furret está caminando</string>
-    <string name="furretDialog">¿Quieres que furret deje de caminar?</string>
-    <string name="Si">Si</string>
-    <string name="No">No</string>
 
 
 
